# DeepsearchHarness

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: settings.yaml
searxng/: .env.example  docker-compose.yml
searxng/core-config/: settings.yml
src/: main.py
src/core/: compact.py  context.py  loop.py  tool.py  types.py
src/hooks/: builtin_hooks.py  engine.py  plan_completeness_hook.py
src/llm/: client.py
src/memory/: extract.py  retrieval.py  store.py  types.py
src/skills/: loader.py
src/tools/: academic_search.py  ask_user.py  cite_source.py  deep_read.py  news_search.py  research_plan.py  run_skill_script.py  use_skill.py  web_fetch.py  web_search.py
src/utils/: content_extractor.py  docx_export.py  rate_limiter.py  session_storage.py  token_counter.py  url_validator.py
src/web/: router.py
src/web/static/: app.js  index.html  style.css
tests/: test_academic_search.py  test_ask_user.py  test_cite_source.py  test_compact.py  test_content_extractor.py  test_deep_read.py  test_docx_export.py  test_hooks_integration.py  test_llm_client.py  test_loop_ask_user.py  test_loop_citations.py  test_loop_fake_tools.py  test_loop_plan_integration.py  test_memory_extract.py  test_memory_retrieval.py  test_memory_store.py  test_news_search.py  test_plan_completeness_hook.py  test_rate_limiter.py  test_research_plan.py  test_session_storage.py  test_skills_loader.py  test_skills_tools.py  test_types.py  test_url_validator.py  test_web.py  test_web_fetch.py  test_web_search.py
