[project]
name = "deepsearch-harness"
version = "0.1.0"
description = "Agentic deep research harness (litellm / OpenAI-compatible)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "markdownify>=0.13.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx2>=2.0.0",
]
browser = ["playwright>=1.49"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"